--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
+    "negotiator": "^0.6.3",
     "next": "14.2.5",
     "next-i18next": "^15.3.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
